Release version 1.7.5 - Fixed a header icon CSS alignment issue.

--- a/src/dialog.styl
+++ b/src/dialog.styl
@@ -78,7 +78,8 @@ $maxHeight = 75vh
             font-weight var(--dialogTitleWeight, $dialogTitleWeight)
 
         .icons
-            white-space nowrap
+            display flex
+            align-items center
 
             .icon-fullscreen
                 cursor ne-resize
